Archive2/f6/0bd59f33328465/output
main.cpp: In function 'int main()':
main.cpp:13:5: error: 's' was not declared in this scope
     s
     ^
main.cpp:14:1: error: expected ';' before '}' token
 }
 ^
